--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@mui/x-date-pickers": "^7.5.1",
+    "@mui/x-date-pickers-pro": "^7.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
