--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,8 @@
     "@mui/x-date-pickers": "^7.5.1",
     "@mui/x-date-pickers-pro": "^7.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
