--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.19",
     "@mui/x-date-pickers": "^7.5.1",
     "@mui/x-date-pickers-pro": "^7.5.1",
+    "dayjs": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
